
- The color theme names have been changed to avoid clashes with
  built in names.

    Old                     New
    ---------------------   -----------------------------
    sublimelinter.<type>    sublimelinter.outline.<type>
    invalid.<type>          sublimelinter.underline.<type>

  You will have to update your color themes accordingly. Please select
  "Preferences->Package Settings->SublimeLinter->README" and search
  for "Customizing colors" for more information.

- When selecting an error from the popup error list, the view is centered
  on the error line.


CHANGES/FIXES

- The PHP error regex has been updated to work with PHP 5.3.8 on Mac OS X.

- The popup error list will no longer choke on non-ASCII text.

- Selecting an error from the popup error list no longer attempts to go
  directly to the point of an error as this could not be done reliably.
  It will jump to the first non-whitespace character of the error's line.

- Go to next/previous error works correctly when an error line has no underlines.

- If an exception is thrown by jshint (e.g. too many errors), the errors
  captured up to that point are displayed.

- The built in jshint has been updated from the master jshint.

- Fixed errors that would occur with the popup error list when there was
  more than error on a line.


SublimeLinter 1.5.3 changelog
=============================
CHANGES/FIXES

- Annotations have been fixed.

- Entries in "sublimelinter_syntax_map" take precedence over built in mappings.

- Lint errors in PHP files will hopefully not be logged to the PHP log file.


SublimeLinter 1.5.4 changelog
=============================
CHANGES/FIXES

- jshint.js has been updated to the latest master version.

- [issue #128] An "unsafe" option has been added to jshint. If set true,
  any UTF-8 characters are allowed in the source.


SublimeLinter 1.5.5 changelog
=============================
CHANGES/FIXES

- This change log is available from the SublimeLinter preferences menu.