@@ -3,5 +3,6 @@
     "1.5.1": "messages/1.5.1.txt",
     "1.5.3": "messages/1.5.3.txt",
     "1.5.4": "messages/1.5.4.txt",
-    "1.5.5": "messages/1.5.5.txt"
+    "1.5.5": "messages/1.5.5.txt",
+    "1.5.6": "messages/1.5.6.txt"
 }
