@@ -6,12 +6,12 @@
 			"description": "Inline lint highlighting for the Sublime Text 2 editor",
 			"author": "Kronuz, Aparajita Fishman, Jake Swartwood",
 			"homepage": "http://github.com/Kronuz/SublimeLinter",
-			"last_modified": "2012-03-21 18:27:31",
+			"last_modified": "2012-03-24 18:27:31",
 			"platforms": {
 				"*": [
 					{
-						"version": "1.5.5",
-						"url": "https://nodeload.github.com/Kronuz/SublimeLinter/zipball/v1.5.5"
+						"version": "1.5.6",
+						"url": "https://nodeload.github.com/Kronuz/SublimeLinter/zipball/v1.5.6"
 					}
 				]
 			}
